# DL_methods

./: datasets_and_dataloaders.html  evaluation_metrics.html  fastai_setup.html  fastaiexample.html  index.html  model_creation.html  model_diagrams.html  model_training_loop.html  pyproject.toml  pytorch_setup.html  save_and_load.html  search.json  settings.ini  sitemap.xml  tensorflow.html  timm_models_torch.html  torch_basics.html  transfer_learning_resnet18.html  transforms.html
Car_detection/: car_detection.html
Computer_Vision/: image_classification.html  image_multi_classification.html  instance_segmentation.html  object_detection.html  panoptic_segmentation.html  semantic_segmentation.html
DeepLearning/: _modidx.py
LLM/: chatgpt_api.html  langchain.html  llmclass.html  ollama.html  openai_langchain.html  openai_sdk.html  rag.html
Models_Types/: autoencoders.html  cnn.html  dbn.html  fnn.html  gan.html  gru.html  lstm.html  rbm.html  resnet18_with_fastai.html  resnet18_with_scratch.html  rnn.html  simple-mnist-nn-from-scratch-numpy.html  simple_cnn_in_pytorch.html  transformers.html
_proc/: 01_Torch_basics.ipynb  02_Model_creation.ipynb  03_Model_training_loop.ipynb  06_Timm_Models_Torch.ipynb  07_TensorFlow.ipynb  08_Save_and_Load.ipynb  09_Transforms.ipynb  10_Evaluation_Metrics.ipynb  11_Model_Diagrams.ipynb  12_Transfer_Learning_resnet18.ipynb  94_pytorch_Setup.ipynb  95_fastAI_Setup.ipynb  96_fastAIExample.ipynb  index.ipynb
nbs/: 01_Torch_basics.ipynb  06_Timm_Models_Torch.ipynb  07_TensorFlow.ipynb  08_Save_and_Load.ipynb  09_Transforms.ipynb  (+5 more)
(+161 files in other folders)
